Add initial 1.10 vanilla support